@@ -372,3 +372,5 @@ Issue #2019345 by johnv: Fixed delete transitions even when no content is assign
 Issue #2019345 by johnv: Moved workflow_transitions functions to Workflow(ConfigTransition) classes.
 Issue #2163805 by johnv: Added user_access to workflow_revert link, not only page.
 Issue #2019345 by johnv: Fixed message on workflow_tab_page.
+Issue #2149223 by johnv: Moved code from workflow_allowable_transitions to central Workflow::getTransitions().
+Issue #2149223 by johnv: Moved code from workflow_transition_allowed to WorkflowConfigTransition::isAllowed().
